# SisDB

./: docker-compose.yml  pyproject.toml
scripts/: create.sql
sisdb/: __init__.py  config.py
sisdb/db/: connection.py
tests/: __init__.py
tests/db/: __init__.py  test_connection.py
