[tool.poetry]
name = "sisdb"
version = "0.1.0"
description = ""
authors = ["Ivan Meirelles <hackermeirelles+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
pyside6 = "^6.8.0.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
